# gazua

./: .env.example  .gitignore  README.md  browser.py  buy_lotto.py  check_result.py  config.py  lotto_utils.py  lotto_web.py  pyproject.toml  requirements.txt  slack_notify.py  test_proxy.py
.github/actions/connect-home-proxy/: action.yml
.github/workflows/: action-result.yml  action-test-proxy.yml  action.yml
tests/: conftest.py  test_config.py  test_lotto_web.py  test_parsing.py  test_sale_status.py  test_slack.py
