[project]
name = "gazua"
version = "0.1.0"
description = "동행복권 로또 자동화 도구"
requires-python = ">=3.8"
authors = [{ name = "Nuung", email = "hyeon.wo.dev@gmail.com" }]
dependencies = [
    "playwright>=1.40.0",
    "pytz>=2023.3",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0"]

[tool.black]
line-length = 88
target-version = ["py38", "py310", "py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
